move product to ddd
